--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Aerolinea
+server.servlet.context-path=/api/v1
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Aerolinea
 spring.datasource.username=postgres
@@ -7,6 +8,6 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-app.jwt.secret = mysecret-J7Q16xGQkmEbE3fv4ecEmDkT5k3TkZZFg6srLt2YmpkEtjPfS28F3u
+app.jwt.secret = J7Q16xGQkmEbE3fv4ecEmDkT5k3TkZZFg6srLt2YmpkEtjPfS28F3u
 app.jwt.expirationMs = 43200000
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
