Correcion de errores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 spring.application.name=Aerolinea
 server.servlet.context-path=/api/v1
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Aerolinea
-spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://localhost:15432/Airline
+spring.datasource.username=dan
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
-app.jwt.secret = J7Q16xGQkmEbE3fv4ecEmDkT5k3TkZZFg6srLt2YmpkEtjPfS28F3u
+app.jwt.secret = J7Q16xGQkmEbE3fv4ecEmDkT5k3TkZZFg6srLt2YmpkEtjPfS28F3
 app.jwt.expirationMs = 43200000
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
